# multitude

./: .gitignore  CMakeLists.txt  Makefile  NOTES  README.md  block.h  loader.cc  matrix.cc  ops.h
examples/: CMakeLists.txt  Makefile  example  example.cc
multitude/: CMakeLists.txt  Doxyfile.in
multitude/include/: block.h  context.h  loader.h  matrix.h  ops.h  thread_pool.h
multitude/src/: context.cc  loader.cc  matrix.cc
tools/: CMakeLists.txt  Makefile  formatter  formatter.cc  mformat.cc
